@@ -1,5 +1,5 @@
 #Properties of this specific CALIPH build
-#Thu, 11 Jul 2013 18:41:23 +0200
+#Fri, 12 Jul 2013 10:58:42 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -44,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/07/11 18\:41
-build-number=192
+build-date=2013/07/12 10\:58
+build-number=193
